--- a/style.css
+++ b/style.css
@@ -502,8 +502,12 @@ body {
         z-index: 999999;
         padding: 20px 24px;
 
-        .nav a { font-size: 8px; color: rgba(255, 255, 255, 0.556); }
         ul { gap: 24px}
+        
+        .nav a { 
+            font-size: 8px; 
+            color: rgba(255, 255, 255, 0.498); 
+        }
     }
 
     .spotlight {
