--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ table {
 }
 
 html {
-    /* scroll-behavior: smooth; */
+    scroll-behavior: smooth 2s;
     /* overflow: hidden; */
     margin: 0;
     padding: 0;
@@ -138,7 +138,7 @@ body {
 
 }
 
-.home {
+#home {
     top: -100px;
     background-color: rgb(236, 236, 236);
     /* position: relative; */
@@ -190,7 +190,7 @@ body {
     }
 }
 
-.about {
+#about {
     /* margin-top: 700px; */
     position: relative;
     height: 2500px;
@@ -323,9 +323,9 @@ body {
     background: radial-gradient(circle at calc(var(--scrollY) * 1 - var(--bufferPost)) 50%, transparent 0.4%, rgba(0, 0, 0, 0.8) 40%);
 }
 
-.work {
+#work {
     padding-top: 465px;
-    height: 360vw;
+    height: 270vw;
     width: 100%;
     background-color: black;
     display: grid;
@@ -422,7 +422,7 @@ body {
     }
 }
 
-.contact {
+#contact {
     height: 80vh;
     width: 100%;
 
@@ -480,7 +480,7 @@ body {
             }
         }
 
-        .contact-info {
+        #contact-info {
             flex: 1;
             display: flex;
             flex-direction: column;
@@ -503,7 +503,7 @@ body {
         padding: 20px 24px;
 
         ul { gap: 24px}
-        
+
         .nav a { 
             font-size: 8px; 
             color: rgba(255, 255, 255, 0.498); 
@@ -515,7 +515,7 @@ body {
         
     }
 
-    .home {
+    #home {
         background-position: -50px calc(var(--scrollY) * 0.96 - 5px) !important;
         height: 1000px;
 
@@ -535,7 +535,7 @@ body {
         }
     }
     
-    .about {
+    #about {
         background-size: 125vh;
         height: 3200px;
         background-position: 62% calc(var(--scrollY) * 0.97 - var(--aboutPost) - 36vh);
@@ -582,8 +582,8 @@ body {
         background: radial-gradient(circle at calc(var(--scrollY) * 1 - var(--bufferPost) - 800px) 50%, transparent 0.4%, rgba(0, 0, 0, 0.8) 40%);
     }
 
-    .work {
-        height: 5200px;
+    #work {
+        height: 3900px;
         grid-template-rows: 0 1fr;
 
         .video-container {
@@ -626,7 +626,7 @@ body {
         }
     }
 
-    .contact {
+    #contact {
         /* position: relative;
         top: -700px; */
         height: 85vh;
@@ -665,7 +665,7 @@ body {
             }
         }
         
-        .contact-info {
+        #contact-info {
             margin-top: 24px;
             margin-left: 36px;
             gap: 16px;
@@ -679,7 +679,7 @@ body {
 }
 
 @media screen and (min-width: 600px) and (max-width: 1023px) {
-    .home {
+    #home {
         background-position: -200px calc(var(--scrollY) * 0.8) !important;
         background-size: cover;
         height: 108vh;
@@ -699,7 +699,7 @@ body {
         }
     }
 
-    .about {
+    #about {
         background-size: 1500px;
         height: 3200px;
         background-position: 65% calc(var(--scrollY) * 0.97 - var(--aboutPost) - 300px);
@@ -740,7 +740,7 @@ body {
         background: radial-gradient(circle at calc(var(--scrollY) * 1 - var(--bufferPost) - 800px) 50%, transparent 0.4%, rgba(0, 0, 0, 0.8) 40%);
     }
 
-    .work {
+    #work {
         height: 5200px;
         grid-template-rows: 0 1fr;
 
@@ -786,7 +786,7 @@ body {
 }
 
 @media screen and (min-width: 1024px) {
-    .home {
+    #home {
         background-position: 0 calc(var(--scrollY) * 0.8);
 
     }
