--- a/style.css
+++ b/style.css
@@ -69,6 +69,23 @@ html {
     --workPost: 5000px; /* height(home + about + buffersection */
 }
 
+.glitch-transition {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background-color: rgba(245, 245, 220, 0);
+    mix-blend-mode: lighten;
+    pointer-events: none;
+
+    & video {
+        /* display: none; */
+        object-fit: cover;
+        mix-blend-mode: lighten;
+    }
+}
+
 
 body {
     font-family: "archivo", sans-serif;
@@ -151,6 +168,7 @@ body {
     background-image: url(./background/imgonline-com-ua-CompressToSize-kcFkYjkZG5I.jpg);
     background-repeat: no-repeat;
     background-size: cover;
+    
     /* background-position: 0 calc(var(--scrollY) * 0.8); */
 
     /* overscroll-behavior: contain; */
