--- a/style.css
+++ b/style.css
@@ -498,7 +498,7 @@ body {
             }
         }
 
-        #contact-info {
+        .contact-info {
             flex: 1;
             display: flex;
             flex-direction: column;
@@ -683,7 +683,7 @@ body {
             }
         }
         
-        #contact-info {
+        .contact-info {
             margin-top: 24px;
             margin-left: 36px;
             gap: 16px;
