--- a/style.css
+++ b/style.css
@@ -69,23 +69,6 @@ html {
     --workPost: 5000px; /* height(home + about + buffersection */
 }
 
-.glitch-transition {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100vh;
-    background-color: rgba(245, 245, 220, 0);
-    mix-blend-mode: lighten;
-    pointer-events: none;
-
-    & video {
-        /* display: none; */
-        object-fit: cover;
-        mix-blend-mode: lighten;
-    }
-}
-
 
 body {
     font-family: "archivo", sans-serif;
@@ -517,7 +500,7 @@ body {
 @media screen and (max-width: 599px) {
 
     .preloader {
-        .dots-10 {margin-top: 40dvh;}
+        /* .dots-10 {margin-top: 40dvh;} */
         & p {font-size: 18px;}
 
     }
