--- a/preloader.css
+++ b/preloader.css
@@ -3,7 +3,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: 100dvh;
     background-color: rgba(245, 245, 220, 0);
     mix-blend-mode: lighten;
     pointer-events: none;
@@ -20,7 +20,7 @@
 
 .preloader {
     width: 100%;
-    height: 100vh;
+    height: 100dvh;
     position: fixed;
     top: 0;
     display: grid;
