--- a/style.css
+++ b/style.css
@@ -389,7 +389,10 @@ body {
                     width: 15.5vw;
 		    height: 8vw;
                     transform: translateX(-50px);
-                }   
+                }
+		    
+		& a {
+		    color: "light-gray";
             }
         }
     }
