--- a/style.css
+++ b/style.css
@@ -424,7 +424,7 @@ body {
         }
 	    
 	& a {
-	    color: #D3D3D3;
+	    color: #A9A9A9;
 	}
     }
 }
@@ -495,7 +495,7 @@ body {
 
             & a {
                 font-size: 20px;
-                color: #D3D3D3;
+                color: #A9A9A9;
             }
         }
     }
