--- a/style.css
+++ b/style.css
@@ -495,7 +495,7 @@ body {
 
             & a {
                 font-size: 20px;
-                color: #A9A9A9;
+                color: white;
 
 		& img {
 		    width: "20px";
@@ -690,8 +690,12 @@ body {
             gap: 16px;
             /* text-align: center; */
 
-            & div {
+            & a {
                 font-size: 16px !important;
+
+		& img {
+		    width: 16px;
+		}
             }
         }
     }
