--- a/style.css
+++ b/style.css
@@ -560,6 +560,7 @@ body {
         border-top: 5px solid black;
         perspective-origin: 0px calc(-1000PX + var(--scrollY) + 50vh);
         perspective: 900px;
+	filter: brightness(1.3);
         
         .layer {
             background-size: 125vh;
