--- a/preloader.css
+++ b/preloader.css
@@ -27,8 +27,8 @@
     place-items: center;
     align-content: center;
     gap: 30px;
-    background-color: rgb(0, 0, 0);
-    z-index: 9999999;
+    background-color: black;
+    z-index: 99999999999;
 
 
     /* & div {
