--- a/style.css
+++ b/style.css
@@ -137,8 +137,7 @@ body {
     /* min-height: 100vh;   */
 
 }
-./background/imgonline-com-ua-CompressToSize-kcFkYjkZG5I.jpg
-https://flic.kr/p/fQSuXb
+
 #home {
     top: -100px;
     background-color: rgb(236, 236, 236);
@@ -149,7 +148,7 @@ https://flic.kr/p/fQSuXb
     display: grid;
     transition: all -1s ease-in-out;
     overflow: hidden;
-    background-image: url(https://flic.kr/p/fQSuXb);
+    background-image: url(./background/imgonline-com-ua-CompressToSize-kcFkYjkZG5I.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     
